Add server/.env.example 1749788093773

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,25 @@
-PORT=5000
-MONGODB_URI=mongodb://admin:password123@rueda-verde-mongodb:27017/rueda-verde?authSource=admin
-JWT_SECRET=your_jwt_secret_here
-AWS_ACCESS_KEY_ID=your_aws_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_here
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=your_bucket_name_here
-FRONTEND_URL=http://localhost:3000
+# Server Environment Variables Example
+# Copy this file to .env and update the values accordingly
+
+# Server Configuration
+PORT=8000
+NODE_ENV=production
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://admin:password123@mongodb:27017/ruedaverde?authSource=admin
+
+# JWT Configuration
+JWT_SECRET=your-secret-key
+
+# AWS Configuration
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+AWS_REGION=your-region
+AWS_S3_BUCKET=your-bucket-name
+
+# Domain Configuration
+FRONTEND_URL=https://tudominio.com
+API_URL=https://api.tudominio.com
+
+# Note: Replace these values with your actual credentials and domains when deploying
+# Make sure to keep your actual .env file secure and never commit it to version control
